netcfg (0.16) unstable; urgency=low

  * NOT RELEASED YET
  * Build-dep on libdebian-installer1-dev, not libdebian-installer-dev.
    Thanks to Thomas Poindessous for fixing this.
  * kraai: canonicalize ethdetect description capitalization
  * waldi: add s390 network types
  * kraai: fix handling of empty DHCP hostname

 -- Bastian Blank <waldi@debian.org>  Thu, 10 Oct 2002 15:48:35 +0000

netcfg (0.15) unstable; urgency=low

  * remove util.[ch] (functions now in libdebian-installer)
  * check hostname for rfc 1123 compliance
  * increase netcfg-* priority to force it after ddetect

 -- Tollef Fog Heen <tfheen@debian.org>  Mon, 16 Sep 2002 17:52:49 +0200

netcfg (0.14) unstable; urgency=low

  * Rebuild for new cdebconf
  * Danish templates thanks to Claus Hindsgaul

 -- Tollef Fog Heen <tfheen@debian.org>  Wed, 21 Aug 2002 19:06:16 +0200

netcfg (0.13) unstable; urgency=low

  * French templates thanks to 
    Philippe Batailler <pbatailler@teaser.fr> (closes: #138073)
  * some build cleanup
  * tfheen: Use libdebian-installer, thanks to thomas poindessous
  * tfheen: Add libdebian-installer-dev to build-depends.
  * tfheen: Change cdebconf-dev to libcdebconf-dev.
  * tfheen: Change maintainer to debian-boot, add David Kimdon and Tollef
    Fog Heen to Uploaders.
  * tfheen: Fix rules file to not munge the templates.
  * tfheen: get rid of emacs changelog variables
  * cjwatson: Correct dpkg-gencontrol call so it picks up ${shlibs:Depends}.

 -- Tollef Fog Heen <tfheen@debian.org>  Tue, 23 Jul 2002 22:22:03 +0200

netcfg (0.12) unstable; urgency=low

  * Make netcfg-static actually work by calling num2dot at most once per
    sprintf, since num2dot uses a static buffer.

 -- Tollef Fog Heen <tfheen@debian.org>  Tue, 29 Jan 2002 21:12:31 +0100

netcfg (0.11) unstable; urgency=low

  * use new dpkg features so build is less cludgy 
  * dhcp and static templates thanks to 
    ilgiz kalmetev <i.kalmetev@bis.bashtelecom.ru>
    (closes: #114843, #114844, #114845)
