@@ -3,7 +3,7 @@ Section: debian-installer
 Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: David Kimdon <dwhedon@debian.org>, Tollef Fog Heen <tfheen@debian.org>
-Build-Depends: debhelper (>= 2.1.18), dpkg-dev (>= 1.9.0), libcdebconf-dev, libdebian-installer1-dev
+Build-Depends: debhelper (>= 4.1.13), dpkg-dev (>= 1.9.0), libcdebconf-dev, libdebian-installer1-dev, po-debconf (>= 0.5.0)
 Standards-Version: 3.1.1
 
 Package: netcfg-dhcp
