@@ -1,0 +1,57 @@
+Template: netcfg/get_domain
+Type: string
+_Description: Choose the domain name.
+ The domain name is the part of your Internet address to the right of your
+ host name.  It is often something that ends in .com, .net, .edu, or .org. 
+ If you are setting up a home network, you can make something up, but make
+ sure you use the same domain name on all your computers.
+
+Template: netcfg/get_nameservers
+Type: string
+_Description: Choose the DNS Server Addresses
+ Please enter the IP addresses (not host names) of up to 3 name servers,
+ separated by spaces. Do not use commas. The servers will be queried in the
+ order in which you enter them. If you don't want to use any name servers
+ just leave this field blank.
+
+Template: netcfg/choose_interface
+Type: select
+Choices: ${ifchoices}
+_Description: Choose an interface.
+ The following interfaces were detected. Choose the type of your primary
+ network interface that you will need for installing the Debian system (via
+ NFS or HTTP).
+
+Template: netcfg/error_cfg
+Type: note
+_Description: An error occured.
+ Something went wrong when I tried to activate your network.
+
+Template: netcfg/get_hostname
+Type: string
+Default: debian
+_Description: Enter the system's hostname.
+ The hostname is a single word that identifies your system to the network. 
+ If you don't know what your hostname should be, consult your network
+ administrator.  If you are setting up your own home network, you can make
+ something up here.
+
+Template: netcfg/invalid_hostname
+Type: note
+_Description: The hostname "${hostname}" is invalid.
+ A valid hostname may contain only alphanumeric characters and the minus
+ sign, be between 2 and 63 characters long, and cannot begin or end with a
+ minus sign.
+
+Template: netcfg/error
+Type: note
+_Description: An error occured and I cannot continue.
+ Feel free to retry.
+
+Template: netcfg/no_interfaces
+Type: note
+_Description: No interfaces were detected.
+ No network interfaces were found.   That means that the installation
+ system was unable to find a network device.  If you do have a network
+ card, then it is possible that the module for it hasn't been selected
+ yet.  Go back to 'Configure network hardware'.
