@@ -1,0 +1,27 @@
+Template: netcfg/dhcp_hostname
+Type: string
+_Description: What is your dhcp hostname?
+ In some situations, you may need to supply a DHCP host name.  These
+ situations are rare.  Most commonly, it applies to cable modem users. If
+ you are a cable modem user, you might need to specify an account number
+ here.  Otherwise, you can just leave this blank.
+
+Template: netcfg/confirm_dhcp
+Type: boolean
+Default: true
+_Description: Is this information correct?
+  interface      = ${interface}
+  hostname       = ${hostname}
+  domain         = ${domain}
+  dhcp hostname  = ${dhcp_hostname}
+  nameservers    = ${nameservers}
+
+Template: netcfg/do_dhcp
+Type: note
+_Description: I will now configure the network.
+ This may take some time.  It shouldn't take more than a minute or two.
+
+Template: netcfg/no_dhcp_client
+Type: note
+_Description: No dhcp client found. I cannot continue.
+ This package requires pump or dhcp-client.
