@@ -35,9 +35,6 @@ clean:
 	dh_testroot
 	rm -f build-stamp configure-stamp
 	rm -f debian/netcfg-dhcp.postinst debian/netcfg-static.postinst
-	for TYPE in common dhcp static ; do \
-	  rm -f debian/netcfg-$$TYPE.templates; \
-	done;
 
 	# Add here commands to clean up after the build process.
 	-$(MAKE) clean
@@ -62,20 +59,11 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 
-	for TYPE in common dhcp static ; do \
-	  TEMPLATES=""; \
-	  for LINGUA in en da de ru fr ; do \
-		TEMPLATES="$$TEMPLATES debian/template/netcfg-$$TYPE.templates.$$LINGUA" ; \
-	  done ; \
-	  echo "Creating netcfg-$$TYPE.templates -- $$TEMPLATES "; \
-	  debconf-mergetemplate $$TEMPLATES > debian/netcfg-$$TYPE.templates; \
-	done ;
-
 	dh_installdebconf
 
-	(echo ; cat debian/netcfg-common.templates ) \
+	(echo ; po2debconf debian/netcfg-common.templates ) \
 	   >> debian/netcfg-static/DEBIAN/templates	
-	(echo ; cat debian/netcfg-common.templates )\
+	(echo ; po2debconf debian/netcfg-common.templates )\
 	   >> debian/netcfg-dhcp/DEBIAN/templates	
 	cp debian/menutest-common debian/netcfg-dhcp/DEBIAN/menutest	
 	cp debian/menutest-common debian/netcfg-static/DEBIAN/menutest	
